fixed spacing

--- a/wp-content/themes/concealr/css/single.scss
+++ b/wp-content/themes/concealr/css/single.scss
@@ -53,7 +53,7 @@ img {
 	color:				$gold;
 	font-family:		$HELV;
 	font-size:			1em;
-	margin:				0 auto 0 auto;
+	margin:				0px auto 30px auto;
 }
 
 #category-tag a {
